[gd_scene load_steps=4 format=3 uid="uid://be3yx1nsysbiu"]

[ext_resource type="Theme" uid="uid://dtli4pnsek1s0" path="res://resources/default_font.tres" id="1_uy0pa"]
[ext_resource type="Script" path="res://scripts/run_history.gd" id="1_ywccq"]
[ext_resource type="StyleBox" uid="uid://c4o8pc3rf1rt4" path="res://resources/ui_button_texture.tres" id="2_1xsx5"]

[node name="RunHistory" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_ywccq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HistoryButtonsContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="BackButton" type="Button" parent="VBoxContainer/HistoryButtonsContainer"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("1_uy0pa")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("2_1xsx5")
theme_override_styles/hover = ExtResource("2_1xsx5")
theme_override_styles/pressed = ExtResource("2_1xsx5")
theme_override_styles/disabled = ExtResource("2_1xsx5")
theme_override_styles/focus = ExtResource("2_1xsx5")
text = "Back"

[node name="ClearButton" type="Button" parent="VBoxContainer/HistoryButtonsContainer"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme = ExtResource("1_uy0pa")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("2_1xsx5")
theme_override_styles/hover = ExtResource("2_1xsx5")
theme_override_styles/pressed = ExtResource("2_1xsx5")
theme_override_styles/disabled = ExtResource("2_1xsx5")
theme_override_styles/focus = ExtResource("2_1xsx5")
text = "Clear"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="DateLabel" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uy0pa")
theme_override_constants/outline_size = 1
text = "Date"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultyLabel" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uy0pa")
theme_override_constants/outline_size = 1
text = "Difficulty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DurationLabel" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uy0pa")
theme_override_constants/outline_size = 1
text = "Duration"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelsLabel" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uy0pa")
theme_override_constants/outline_size = 1
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_uy0pa")
theme_override_constants/outline_size = 1
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1
